--- a/src/main/webapp/pages/criarGrupos.xhtml
+++ b/src/main/webapp/pages/criarGrupos.xhtml
@@ -9,35 +9,48 @@
 		<b:jumbotron>
 			<b:container>
 				<h4>Criar Grupos</h4>
-					Para criar um conjunto de currículos.... 	                              
+					Para criar um conjunto de currículos a partir de um ou mais curriculos Lattes ou de grupos já existentes. 	                              
 	            </b:container>
 		</b:jumbotron>
 		<b:container>
 			<b:well>
-				<h:form>
+				<h:form id="formCreateGroup">
+					<p:messages id="messages"/>
+					
 					<h:panelGrid columns="1">
-						<p:inputText id="nomeGrupo" value="#{createGroupBean.groupName}"
-							placeholder="Nome do grupo" size="30" required="true" >
-						</p:inputText>
-
+						<p:row>
+							<p:inputText id="nomeGrupo" value="#{createGroupBean.groupName}"
+								placeholder="Nome do grupo" size="30" required="true" 
+								requiredMessage="Erro! O nome do grupo deve ser preenchido">
+							</p:inputText>
+							<p:outputLabel for="nomeGrupo" />
+						</p:row>
 						<p:fileUpload
+							id="fileUploadButton"
 							fileUploadListener="#{createGroupBean.handleFileUpload}"
 							mode="advanced" dragDropSupport="false" multiple="true"
 							auto="true" label="Carregar Arquivo ou Pasta"
-							sizeLimit="10000000" allowTypes="/(\.|\/)(xml)$/" update="dataList" />
+							sizeLimit="10000000" allowTypes="/(\.|\/)(xml)$/" update="@form" disabled="#{createGroupBean.existingGroup}" />
 
 						<p:dataList id="dataList" value="#{createGroupBean.fileNames}" var="name" rendered="#{not empty createGroupBean.fileNames}">
 							<h:outputText value="#{name}" />
 						</p:dataList>
+						<p:spacer height="10" />
 
-						<p:selectBooleanCheckbox value="#{createGroupBean.existingGroup}" />
-						<h:outputText value="Selecionar grupos existentes " />
-
+						<p:row >
+							<p:selectBooleanCheckbox value="#{createGroupBean.existingGroup}" >
+								<p:ajax event="change" update="pickList, fileUploadButton"/>
+							</p:selectBooleanCheckbox>
+							<p:spacer width="5" />
+							<h:outputText value="Selecionar grupos existentes "  />
+						</p:row>
+						
 						<p:pickList id="pickList" value="#{createGroupBean.groups}"
-							var="groups" itemLabel="#{groups}" itemValue="#{groups}" />
+							var="group" itemLabel="#{group.name}" itemValue="#{group}"
+								converter="groupConverter" disabled="#{not createGroupBean.existingGroup}" showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains" />
 					</h:panelGrid>
 
-					<p:commandButton id="novoGrupo" validateClient="true" value="Novo Grupo" actionListener="#{createGroupBean.create}"/>
+					<p:commandButton id="novoGrupo" validateClient="true" value="Novo Grupo" actionListener="#{createGroupBean.create}" update="formCreateGroup" />
 				</h:form>
 			</b:well>
 		</b:container>
