--- a/src/main/webapp/pages/relatorio.xhtml
+++ b/src/main/webapp/pages/relatorio.xhtml
@@ -19,11 +19,14 @@
 						<p:panelGrid columns="1" layout="grid" styleClass="ui-noborder">
 							<p:row>
 								<p:column>
-									<p:selectBooleanCheckbox value="checkQualisDataConference" />
+									<p:selectBooleanCheckbox value="#{relatorioBean.checkQualisDataConference}" >
+										<p:ajax event="change" update="qualisConference"/>
+									</p:selectBooleanCheckbox>
 									<h:outputText value="Selecionar Qualis de Conferência " />
 									<p:selectOneMenu id="qualisConference"
 										value="#{relatorioBean.selectedQualisDataConference}"
-										style="width:125px" converter="qualisDataConverter">
+										style="width:125px" converter="qualisDataConverter"
+										disabled="#{not relatorioBean.checkQualisDataConference}">
 										<f:selectItems value="#{relatorioBean.qualisDataConference}"
 											var="qualisData" itemValue="#{qualisData}"
 											itemLabel="#{qualisData.year}" />
@@ -32,11 +35,14 @@
 							</p:row>
 
 							<p:row>
-								<p:selectBooleanCheckbox value="checkQualisDataPeriodic" />
+								<p:selectBooleanCheckbox value="#{relatorioBean.checkQualisDataPeriodic}" >
+									<p:ajax event="change" update="qualisPeriodic"/>
+								</p:selectBooleanCheckbox>
 								<h:outputText value="Selecionar Qualis para Periódicos " />
 								<p:selectOneMenu id="qualisPeriodic"
 									value="#{relatorioBean.selectedQualisDataPeriodic}"
-									style="width:125px" converter="qualisDataConverter">
+									style="width:125px" converter="qualisDataConverter"
+									disabled="#{not relatorioBean.checkQualisDataPeriodic}">
 									<f:selectItems value="#{relatorioBean.qualisDataPeriodic}"
 										var="qualisData" itemValue="#{qualisData}"
 										itemLabel="#{qualisData.year}" />
@@ -44,7 +50,7 @@
 							</p:row>
 							<p:row>
 								<p:selectBooleanCheckbox id="orientations"
-									value="checkOrientations" />
+									value="#{relatorioBean.checkOrientations}" />
 								<p:outputLabel for="orientations" value="Orientações" />
 							</p:row>
 						</p:panelGrid>
@@ -56,7 +62,8 @@
 								var="group" itemLabel="#{group.name}" itemValue="#{group}"
 								converter="groupConverter" />
 						</p:row>
-						<p:row colspan="2" style="float:right">
+						<p:row colspan="1" style="float:right">
+							<p:spacer />
 							<p:commandButton value="Comparar" type="submit"
 								actionListener="#{relatorioBean.comparar}" update="form2"
 								styleClass="ui-priority-primary" ajax="false" />
